# photokiosk-nicegui

./: .env.local  .gitignore  Dockerfile  README.md  config.ini  pyproject.toml  rebuild.sh
photokiosk_nicegui/: layout.py  main.py
photokiosk_nicegui/static/: style.css
