[tool.poetry]
name = "photokiosk-nicegui"
version = "0.1.0"
description = ""
authors = ["Beau Nieuwveld <beau@aluminium-stewardship.org>"]
readme = "README.md"
packages = [{include = "photokiosk_nicegui"}]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.3.6"
wagtail = "^5.0.2"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
